Fixe Flyr files not writing end of file mark properly also fixed build

--- a/WolvenKit.Bundles/WolvenKit.Bundles.csproj
+++ b/WolvenKit.Bundles/WolvenKit.Bundles.csproj
@@ -72,9 +72,12 @@
     <Compile Include="BundleItem.cs" />
     <Compile Include="BundleManager.cs" />
     <Compile Include="InvalidFileTypeException.cs" />
+    <Compile Include="ISerializable.cs" />
     <Compile Include="Metadata_Store.cs" />
     <Compile Include="MissingCompressionException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDynArray.cs" />
+    <Compile Include="__Metadata_Store_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
