--- a/WolvenKit.Bundles/WolvenKit.Bundles.csproj
+++ b/WolvenKit.Bundles/WolvenKit.Bundles.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5BD2292A-24DB-4B4A-A5B1-5D435769C289}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WolvenKit.Bundles</RootNamespace>
     <AssemblyName>WolvenKit.Bundles</AssemblyName>
@@ -71,9 +71,12 @@
     <Compile Include="BundleItem.cs" />
     <Compile Include="BundleManager.cs" />
     <Compile Include="InvalidFileTypeException.cs" />
+    <Compile Include="ISerializable.cs" />
     <Compile Include="Metadata_Store.cs" />
     <Compile Include="MissingCompressionException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDynArray.cs" />
+    <Compile Include="__Metadata_Store_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
