Implement HairWorksInfo writing completely and refactor
- Also fixed CDateTime reading and writing

--- a/Wolvekit.Nvidia/WolvenKit.Nvidia.csproj
+++ b/Wolvekit.Nvidia/WolvenKit.Nvidia.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Apex.cs" />
     <Compile Include="AssemblyExtensions.cs" />
     <Compile Include="HairWorks\NvHairAssetHeaderInfo.cs" />
+    <Compile Include="HairWorks\NvidiaXML.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
