--- a/Wolvekit.Nvidia/WolvenKit.Nvidia.csproj
+++ b/Wolvekit.Nvidia/WolvenKit.Nvidia.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Apex.cs" />
     <Compile Include="AssemblyExtensions.cs" />
     <Compile Include="HairWorks\HairSceneDescriptor.cs" />
+    <Compile Include="HairWorks\NvHairAssetDescriptor.cs" />
     <Compile Include="HairWorks\NvHairAssetHeaderInfo.cs" />
     <Compile Include="HairWorks\NvidiaXML.cs" />
     <Compile Include="Program.cs" />
