--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -16,6 +16,7 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="VisualPlus" version="0.4.1.4-beta" targetFramework="net461" />
   <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Forms" version="2.2.1" targetFramework="net461" />
