--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AltoControls" version="1.0.1" targetFramework="net461" />
+  <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
   <package id="CyotekImageBox" version="1.2.1" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
@@ -20,4 +21,5 @@
   <package id="Vlc.DotNet.Core" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Core.Interops" version="2.2.1" targetFramework="net461" />
   <package id="Vlc.DotNet.Forms" version="2.2.1" targetFramework="net461" />
+  <package id="WinFormAnimation" version="1.5.6298.3372" targetFramework="net461" />
 </packages>
