--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Editors\PtrEditor.Designer.cs">
       <DependentUpon>PtrEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Types\CItemEntity.cs" />
     <Compile Include="Types\CRagdoll.cs" />
     <Compile Include="Types\CTree.cs" />
     <Compile Include="HslColor.cs" />
