--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,18 @@
-clone_script:
-- cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
-- cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
-
 # Skip commits on updating git specific stuff. No actual project changes in this case so pointless to build.
 skip_commits:
  files:
    - .gitignore
    - README.md
+
+clone_script:
+- cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+- cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
+
+build:
+  project: WolvenKit.sln
+
+platform: Any CPU
+configuration: Release
 
 before_build:
   - nuget restore
