--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,40 @@ skip_commits:
    - .gitignore
    - README.md
 
-before_build:
-  - nuget restore
-  
+clone_script:
+- cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+- cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
+ 
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: "0.2.{build}"
+  assembly_file_version: "{version}"
+  assembly_informational_version: "{version}"
+
 # Update to the most recent VS.
 image: Visual Studio 2017
-configuration: Release
+
+build:
+  parallel: true   
+  project: WolvenKit.sln
+
 platform: Any CPU
+configuration: Release
+
+before_build:
+  - nuget restore
+after_build:
+  - 7z a WolvenKit.zip %APPVEYOR_BUILD_FOLDER%\WolvenKit\bin\Release\*
+  - appveyor PushArtifact WolvenKit.zip
+
+deploy:
+  release: WolvenKit-v$(appveyor_build_version)
+  tag: Latest
+  description: 'This is a beta release so you may encounter bugs. Please report them.'
+  provider: GitHub
+  auth_token:
+    secure: PVcjhc6iNEsA28A1clj8BTACho8kddrMQXuFtLoTnJo9wgaQ8erwBvwGd+tMFQT6
+  artifact: WolvenKit.zip
+  prerelease: true
+  force_update: true
