--- a/WolvenKit.Bundles/packages.config
+++ b/WolvenKit.Bundles/packages.config
@@ -4,6 +4,7 @@
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net45" />
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net45" />
+  <package id="protobuf-net" version="2.3.13" targetFramework="net461" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net45" />
   <package id="VVVV.FreeImage" version="3.15.1.1" targetFramework="net45" />
 </packages>
