--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,9 @@ skip_commits:
    - .gitignore
    - README.md
 
+init:
+  - ps: Update-AppveyorBuild -Version "$(Get-Date -format yyyy.MM.dd)"
+
 clone_script:
 - cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
 - cmd: git checkout -qf %APPVEYOR_REPO_COMMIT%
