--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,8 @@ skip_commits:
    - README.md
 
 init:
-  - ps: Update-AppveyorBuild -Version "$(Get-Date -format yyyy.MM.dd)"
+  - ps: $env:WK_VERSION = "$(Get-Date -format yyyy.MM.dd)-$env:APPVEYOR_REPO_COMMIT"
+  - ps: Update-AppveyorBuild -Version $env:WK_VERSION
 
 clone_script:
 - cmd: git clone -q --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
@@ -31,8 +32,8 @@ configuration: Release
 before_build:
   - nuget restore
 after_build:
-  - 7z a WolvenKit.zip %APPVEYOR_BUILD_FOLDER%\WolvenKit\bin\Release\*
-  - appveyor PushArtifact WolvenKit.zip
+  - 7z a WolvenKit-%WK_VERSION%.zip %APPVEYOR_BUILD_FOLDER%\WolvenKit\bin\Release\*
+  - appveyor PushArtifact WolvenKit-%WK_VERSION%.zip
 
 deploy:
   release: WolvenKit-v$(appveyor_build_version)
@@ -41,6 +42,6 @@ deploy:
   provider: GitHub
   auth_token:
     secure: PVcjhc6iNEsA28A1clj8BTACho8kddrMQXuFtLoTnJo9wgaQ8erwBvwGd+tMFQT6
-  artifact: WolvenKit.zip
+  artifact: WolvenKit-%WK_VERSION%.zip
   prerelease: true
   force_update: true
